# memoryguard

./: CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage-badge.yml  coverage.yml  debug-import.yml  deploy-status.yml  docker.yml  release.yml  simple-test.yml  smoke-test.yml
memoryguard/: __init__.py
tests/: test_memoryguard.py
