[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryguard"
version = "1.0.2"
description = "🔍 Modular Python Memory Monitoring & Valgrind Integration - Like Lego for your Code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Security Team", email = "security@example.com"}
]
keywords = ["memory", "profiling", "valgrind", "monitoring", "debugging", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
dashboard = [
    "rich>=13.0",
]
all = [
    "rich>=13.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/SHAdd0WTAka/memoryguard"
Documentation = "https://github.com/SHAdd0WTAka/memoryguard#readme"
Repository = "https://github.com/SHAdd0WTAka/memoryguard"
Issues = "https://github.com/SHAdd0WTAka/memoryguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memoryguard*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=memoryguard --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["memoryguard"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
